[package]
name = "ybc"
version = "0.2.1"
description = "A Yew component library based on the Bulma CSS framework."
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/thedodd/ybc"
readme = "README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

[dependencies]
derive_more = { version="0.99.9", default-features=false, features=["display"] }
web-sys = { version="0.3", features=["Element", "File", "HtmlCollection", "HtmlSelectElement"] }
yew = "0.19"
yew-agent = "0.1"
yew-router = { version="0.16", optional=true }
wasm-bindgen = "0.2"
serde = "1"

[features]
default = ["router"]
router = ["yew-router"]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
