[package]
name = "ybc"
version = "0.4.0"
description = "A Yew component library based on the Bulma CSS framework."
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/thedodd/ybc"
readme = "README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
web-sys = { version = "0.3.61", features = ["Element", "File", "HtmlCollection", "HtmlSelectElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
yew-router = { version = "0.17.0", optional = true }
wasm-bindgen = "0.2.84"
serde = { version = "1.0.152", features = ["derive"] }

[features]
default = ["router"]
router = ["yew-router"]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
