[package]
name = "basic"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
gloo-console = "0.2"
wasm-bindgen = "0.2"
ybc = { path = "../../" }
yew = "0.20"

[features]
default = []
demo-abc = []
demo-xyz = []
